Created rcrop utility for cropping matrices and pictures more
conveniently, correcting view information.  Expect it to be handy
for extracting rows and columns from matrices, mostly.

Changed pcomb so -o option elides original exposure values
from indented source headers.

Added getinfo -r option, which is similar to -a except it will
replace indicated lines with new ones.

Slight change to vwrays -d option to not spit out "-ld-", and to
produce "-ld+" without requiring input picture as argument.

Added automatic overture calculation to rtpict with -n > 1 if
ambient cache is on and file is named.  If straight image output
is requested, we randomize all samples and avoid cache collisions.

Added cnt -s option to shuffle output.

Fixed issue with divide-by-zero errors in the ambient super-sampling
routine discovered by Jon Sargent of Solemma.  This affected regions
that had zero radiance, such as black backgrounds or unlit areas
with -av 0 0 0, when super-sampling was effectively disabled, causing
some loss in accuracy of the results.

Updated Klems Half- and Quarter-bases to match angles currently used
in WINDOW.

Eliminated most aiming failures for triangular light sources, at the
expense of conservative sampling near the centroid.  Thanks to
David Geisler-Moroder for his help on this.

Increased maximum set size to 8191 to avoid set overflow errors.

Added source obstruction test to statistics being kept on which
sources were visible in adaptive shadow testing code.  Previous
behavior was likely over-estimating source contributions.

Added diffuse components into maximum directional hemispherical
reported by checkBSDF, so comparing to 100% is easier for each
component.

Fixed incorrect calculations in iso2klems script, thanks to
help from Jacob Jonnson.

Updated official copyright and license according to new wording
provided by Jean Haemmerle at the LBNL Intellectual Property Office.
Both were copied verbatim from e-mail I received from Taoning Wang
on 8/20/2022.