@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rcontrib.1,v 1.20 2022/10/19 18:23:14 greg Exp $"
+.\" RCSid "$Id: rcontrib.1,v 1.21 2022/10/19 21:25:20 greg Exp $"
 .TH RCONTRIB 1 5/25/05 RADIANCE
 .SH NAME
 rcontrib - compute contribution coefficients in a RADIANCE scene
@@ -45,6 +45,8 @@ rtrace options
 .B octree
 .br
 .B "rcontrib [ options ] \-defaults"
+.br
+.B "rcontrib \-features [feat1 ..]"
 .SH DESCRIPTION
 .I Rcontrib
 computes ray coefficients
