@@ -2575,3 +2575,10 @@ Updated official copyright and license according to new wording
 provided by Jean Haemmerle at the LBNL Intellectual Property Office.
 Both were copied verbatim from e-mail I received from Taoning Wang
 on 8/20/2022.
+
+Added -features option to rpict, rtrace, and rcontrib to check
+which features are present or look for specific feature support.
+This addition was suggested by Peter Apian-Bennewitz as an easier
+way to determine which version of Radiance is installed and what
+it supports, and is timely as we begin our refactoring of the
+rendering code.  There are no current plans to add this to rvu.
